--- a/MyTracker/app/src/main/AndroidManifest.xml
+++ b/MyTracker/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <application
         android:name=".BookApp"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/timestamp_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
